Some major updates to Aim2 and Aim3 - finalized INLA code and SOM analysis

--- a/Aim3/code/03landscape-patches.ipynb
+++ b/Aim3/code/03landscape-patches.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 2,
    "id": "38aa9454-0403-42d2-a456-df8e6c8f7973",
    "metadata": {},
    "outputs": [
@@ -46,24 +46,48 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "id": "81eec940-2604-47de-a0fa-9d5940d7c85a",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "Index(['fs_id', 'sfs_id', 'sfs_area_ha', 'fs_name', 'sfs_exposure',\n",
-       "       'pct_disturbed', 'US_L4CODE', 'US_L4NAME', 'trend_area', 'trend_count',\n",
-       "       'historic', 'ssp245', 'ssp585', 'delta245', 'delta585', 'aspen10_pct',\n",
-       "       'aspen10_pixn', 'combust_sum', 'msbf_count_sum', 'pop_density_max',\n",
-       "       'pop_count_sum', 'wui1', 'wui2', 'wui3', 'wui4', 'wui_dist_mean',\n",
-       "       'sfs_area', 'burned_area_c', 'burned_pct_c', 'whp_p95', 'dom_evt1',\n",
-       "       'dom_evt2', 'dom_evt3', 'dom_evt4', 'Aspen', 'Douglas_fir',\n",
-       "       'Gambel_oak', 'Lodgepole', 'Piñon_juniper', 'Ponderosa', 'Sagebrush',\n",
-       "       'Spruce_fir', 'White_fir', 'forest_cc_mean', 'forest_ch_mean',\n",
-       "       'geometry'],\n",
+       "Index(['OBJECTID', 'Fireshed_ID', 'Subfireshed_ID', 'Fireshed_Area_Ha',\n",
+       "       'Subfireshed_Area_Ha', 'Fireshed_Name', 'Fireshed_Code',\n",
+       "       'Fireshed_State', 'Shape_Length', 'Shape_Area', 'Fireshed_MajRegion',\n",
+       "       'AnnualExposure', 'PctRecentlyDisturbed', 'geometry'],\n",
        "      dtype='object')"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "fp = os.path.join(projdir, 'Aim3/data/spatial/raw/fsim/firesheds/subfiresheds.gpkg')\n",
+    "firesheds = gpd.read_file(fp)\n",
+    "firesheds.columns"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "26217580-bb27-4268-be3b-9338a3729c2d",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1714\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "Index(['sfs_id', 'sfs_area_ha', 'geometry'], dtype='object')"
       ]
      },
      "execution_count": 4,
@@ -72,32 +96,36 @@
     }
    ],
    "source": [
-    "fp = os.path.join(projdir, 'Aim3/data/spatial/mod/srm_firesheds_model_data.gpkg')\n",
-    "firesheds = gpd.read_file(fp)\n",
+    "firesheds = firesheds[['Subfireshed_ID','Subfireshed_Area_Ha','geometry']]\n",
+    "firesheds.rename(columns={\n",
+    "    'Subfireshed_ID': 'sfs_id',\n",
+    "    'Subfireshed_Area_Ha': 'sfs_area_ha'\n",
+    "}, inplace=True)\n",
+    "print(len(firesheds))\n",
     "firesheds.columns"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 5,
    "id": "c42fe215-deeb-4e8f-b9ae-72ff1a96f9b8",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "count     1637.000000\n",
-       "mean     10315.122883\n",
-       "std       1246.483878\n",
+       "count     1714.000000\n",
+       "mean     10317.604201\n",
+       "std       1255.129538\n",
        "min       5832.000000\n",
        "25%       9564.480000\n",
        "50%      10380.960000\n",
-       "75%      11080.800000\n",
+       "75%      11197.440000\n",
        "max      14580.000000\n",
        "Name: sfs_area_ha, dtype: float64"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -108,50 +136,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
-   "id": "0ac52784-85db-4a96-a0f2-229751355e0d",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "1637\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "1416"
-      ]
-     },
-     "execution_count": 8,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "# subset to fireshed with at least ~5% aspen cover\n",
-    "print(len(firesheds))\n",
-    "fs_aspen = firesheds[firesheds['aspen10_pct'] > 0.05]\n",
-    "len(fs_aspen)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 6,
    "id": "39952531-03d0-41cc-972d-6b0f0b271a2f",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "28c2544bd66c435fa488db278dc30dab",
+       "model_id": "684d86dffd5b453aaac2f854f1c0c287",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "Processing firesheds:   0%|          | 0/1416 [00:00<?, ?it/s]"
+       "Processing firesheds:   0%|          | 0/1714 [00:00<?, ?it/s]"
       ]
      },
      "metadata": {},
@@ -162,14 +159,13 @@
      "output_type": "stream",
      "text": [
       "\n",
-      "Total elapsed time: 1.26 minutes.\n",
+      "Total elapsed time: 1.24 minutes.\n",
       "\n"
      ]
     }
    ],
    "source": [
     "# patch analysis - largest patch size, mean patch size, etc\n",
-    "\n",
     "dir = os.path.join(projdir,'Aim1/data/spatial/mod/results/classification/')\n",
     "aspen10_fp = os.path.join(dir,'s2aspen_distribution_10m_y2019_CookEtAl.tif')\n",
     "\n",
@@ -195,9 +191,14 @@
     "        # Compute patch statistics\n",
     "        ls = pls.Landscape(arr, res=(10, 10))\n",
     "        patches = ls.compute_class_metrics_df(metrics=cls_metrics)\n",
-    "        patches[\"sfs_id\"] = unit_id\n",
-    "\n",
-    "        return patches\n",
+    "        # retain only aspen patches\n",
+    "        patches = patches.reset_index() # set \"class_val\"\n",
+    "        patches = patches[patches[\"class_val\"] == 1].copy()\n",
+    "        if not patches.empty:\n",
+    "            patches[\"sfs_id\"] = unit_id\n",
+    "            return patches\n",
+    "        else:\n",
+    "            return None\n",
     "\n",
     "    except Exception as e:\n",
     "        print(f\"Error processing grid {fireshed['sfs_id']}: {e}\")\n",
@@ -207,7 +208,7 @@
     "    t0 = time.time()\n",
     "\n",
     "    num_workers = 2  # adjust as needed\n",
-    "    fs_list = fs_aspen.to_dict(orient=\"records\")  # Convert GeoDataFrame to list\n",
+    "    fs_list = firesheds.to_dict(orient=\"records\")  # Convert GeoDataFrame to list\n",
     "\n",
     "    results = []\n",
     "    with concurrent.futures.ThreadPoolExecutor(max_workers=num_workers) as executor:\n",
@@ -228,7 +229,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 7,
    "id": "9a6f1f4c-ffbd-4d0c-8572-6fa9fc821b98",
    "metadata": {},
    "outputs": [
@@ -253,6 +254,7 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
+       "      <th>class_val</th>\n",
        "      <th>number_of_patches</th>\n",
        "      <th>patch_density</th>\n",
        "      <th>largest_patch_index</th>\n",
@@ -262,6 +264,7 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
+       "      <td>1</td>\n",
        "      <td>86</td>\n",
        "      <td>3.815372</td>\n",
        "      <td>0.095384</td>\n",
@@ -269,13 +272,15 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>2</td>\n",
-       "      <td>0.088730</td>\n",
-       "      <td>68.277848</td>\n",
-       "      <td>20467</td>\n",
+       "      <td>1</td>\n",
+       "      <td>4</td>\n",
+       "      <td>0.161778</td>\n",
+       "      <td>0.010920</td>\n",
+       "      <td>20466</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
+       "      <td>1</td>\n",
        "      <td>1941</td>\n",
        "      <td>54.625124</td>\n",
        "      <td>2.078062</td>\n",
@@ -283,32 +288,34 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>2</td>\n",
-       "      <td>0.056286</td>\n",
-       "      <td>59.755270</td>\n",
-       "      <td>20469</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
+       "      <td>1</td>\n",
        "      <td>1147</td>\n",
        "      <td>34.018549</td>\n",
        "      <td>2.622127</td>\n",
        "      <td>21247</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>1</td>\n",
+       "      <td>274</td>\n",
+       "      <td>6.027091</td>\n",
+       "      <td>0.690916</td>\n",
+       "      <td>21025</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "   number_of_patches  patch_density  largest_patch_index  sfs_id\n",
-       "0                 86       3.815372             0.095384   20467\n",
-       "1                  2       0.088730            68.277848   20467\n",
-       "2               1941      54.625124             2.078062   20469\n",
-       "3                  2       0.056286            59.755270   20469\n",
-       "4               1147      34.018549             2.622127   21247"
+       "   class_val  number_of_patches  patch_density  largest_patch_index  sfs_id\n",
+       "0          1                 86       3.815372             0.095384   20467\n",
+       "1          1                  4       0.161778             0.010920   20466\n",
+       "2          1               1941      54.625124             2.078062   20469\n",
+       "3          1               1147      34.018549             2.622127   21247\n",
+       "4          1                274       6.027091             0.690916   21025"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -319,7 +326,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 8,
+   "id": "aa02a4f9-12f2-42a0-b613-b49313c082ed",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1635"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(patch_metrics_df)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
    "id": "a749d220-cc87-4369-93c7-0808ea57fb8e",
    "metadata": {},
    "outputs": [
