--- a/Aim2/code/Python/03a_viirs_earthaccess-swath.ipynb
+++ b/Aim2/code/Python/03a_viirs_earthaccess-swath.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "d1ec03ae-2946-4baf-a5f7-f722a615f19e",
    "metadata": {},
    "outputs": [
@@ -10,6 +10,25 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "Channels:\n",
+      " - conda-forge\n",
+      "Platform: linux-64\n",
+      "Collecting package metadata (repodata.json): done\n",
+      "Solving environment: done\n",
+      "\n",
+      "\n",
+      "==> WARNING: A newer version of conda exists. <==\n",
+      "    current version: 23.11.0\n",
+      "    latest version: 25.3.1\n",
+      "\n",
+      "Please update conda by running\n",
+      "\n",
+      "    $ conda update -n base -c conda-forge conda\n",
+      "\n",
+      "\n",
+      "\n",
+      "# All requested packages already installed.\n",
+      "\n",
       "Ready !\n"
      ]
     }
@@ -31,6 +50,10 @@
     "Author: maxwell.cook@colorado.edu\n",
     "\"\"\"\n",
     "\n",
+    "# Install conda\n",
+    "!conda install -n macrosystems -c conda-forge rasterstats -y\n",
+    "\n",
+    "# Other packages\n",
     "import sys, os\n",
     "import earthaccess as ea\n",
     "import geopandas as gpd\n",
@@ -56,12 +79,12 @@
     "from __functions import *\n",
     "        \n",
     "# Directories\n",
-    "maindir = '/Users/max/Library/CloudStorage/OneDrive-Personal/mcook/'\n",
-    "projdir = os.path.join(maindir, 'aspen-fire/Aim2/')\n",
+    "maindir = '/data-store/'\n",
+    "projdir = os.path.join(maindir, 'aspen-fire-fork/Aim2/')\n",
     "\n",
     "# Output directories\n",
-    "dataraw = os.path.join(projdir,'data/spatial/raw/VIIRS/')\n",
-    "datamod = os.path.join(projdir,'data/spatial/mod/VIIRS/')\n",
+    "dataraw = '/data-store/output/aspen-fire/spatial/raw/VIIRS'\n",
+    "datamod = '/data-store/output/aspen-fire/spatial/mod/VIIRS'\n",
     "\n",
     "print(\"Ready !\")"
    ]
@@ -1276,9 +1299,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "aspen-fire",
+   "display_name": "macrosystems",
    "language": "python",
-   "name": "aspen-fire"
+   "name": "macrosystems"
   },
   "language_info": {
    "codemirror_mode": {
@@ -1290,7 +1313,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.12"
+   "version": "3.10.13"
   }
  },
  "nbformat": 4,
