--- a/Aim2/code/Python/03c_viirs-afd-processing.ipynb
+++ b/Aim2/code/Python/03c_viirs-afd-processing.ipynb
@@ -105,6 +105,7 @@
    ],
    "source": [
     "# Load and tidy the fire perimeter data\n",
+    "## NH: this will be from FIRED now\n",
     "fp = os.path.join(projdir,'data/spatial/mod/srm_fire_census_2017_to_2023_ics_perims.gpkg')\n",
     "fires = gpd.read_file(fp)\n",
     "\n",
@@ -115,6 +116,7 @@
     "fires['ICS_ACRES'] = fires['ICS_ACRES'].astype(float)\n",
     "\n",
     "# subset the columns\n",
+    "## NH: note that FIRED does not have Fire_Name and the columns will be different\n",
     "fires = fires[['Fire_ID','Fire_Name','Final_Acres',\n",
     "               'INCIDENT_ID','START_YEAR','DISCOVERY_DATE',\n",
     "               'WF_CESSATION_DATE','ICS_ACRES','geometry']]\n",
@@ -206,6 +208,8 @@
    ],
    "source": [
     "# drop low confidence detections\n",
+    "\n",
+    "## NH: potentially keep this step or keep all the fires and allow people to filter after by keeping the confidence column\n",
     "N = len(afds)\n",
     "print(afds['confidence'].value_counts())\n",
     "afds = afds[afds['confidence'] != 'l']\n",
@@ -306,6 +310,7 @@
     ").drop(columns=['index_right']) # drop the join index column\n",
     "\n",
     "# check for duplicate rows (same AFD, multiple fires)\n",
+    "## NH: removing the smallest duplicate appropriate or is there a better way to handle these VIIRS duplictes?\n",
     "duplicates = afds_ll_fires[afds_ll_fires.duplicated(subset='afdID', keep=False)]\n",
     "print(f\"\\nResolving [{len(duplicates)}/{len(afds_ll_fires)}] duplicate obs.\\n\")\n",
     "\n",
@@ -1910,9 +1915,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "aspen-fire",
+   "display_name": "macrosystems",
    "language": "python",
-   "name": "aspen-fire"
+   "name": "macrosystems"
   },
   "language_info": {
    "codemirror_mode": {
@@ -1924,7 +1929,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.12"
+   "version": "3.10.13"
   }
  },
  "nbformat": 4,
